# dezl

./: Cargo.toml
.github/workflows/: static_pages.yml
client/charmaps/: halfwidth.json
client/dezlclient/: commandhandler.py  display.py  gameclient.py  inventory.py  layout.xml
client/dezlclient/common/: messages.py
client/keybindings/: default.json
client/ratuil/widgets/: listing.py
client/web/: client.js  control.js  display.js  index.html  main.js
src/: action.rs  basemap.rs  config.rs  controls.rs  creature.rs  creaturemap.rs  creatures.rs  crop.rs  errors.rs  gameserver.rs  infinitemap.rs  inventory.rs  item.rs  loadedareas.rs  main.rs  map.rs  persistence.rs  player.rs  pos.rs  random.rs  randomtick.rs  sprite.rs  tile.rs  tiledmap.rs  timestamp.rs  world.rs  worldmessages.rs
src/server/: address.rs  connection.rs  mod.rs  tlsserver.rs  unixserver.rs
src/util/: holder.rs  mod.rs
web/: .gitignore  actionbar.js  client.js  display.js  edgefuzz.js  gamemap.js  grid32.js  gridu32.js  index.html  main.js  model.js  preview_sprites.html  preview_sprites.js  sprites.js  style.css  vec2.js
