[package]
name = "dezl"
version = "0.1.0"
edition = "2021"
authors = ["troido"]
description = "Experimental ascii mmorpg"
categories = ["game"]

[dependencies]
mio = { version = "0.8", features = ["net", "os-ext"] }
nix = "0.26"
tungstenite = "0.21"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
clap = {version = "4.4", features = ["derive", "env"] }
time = "0.3"
enum_dispatch = "0.3"
enum-assoc = "1.1"

[profile.release]
debug = true
#
# [rust]
# debuginfo-level = 1

# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
